Variables para EMAIL en settings y reestructuración de static.

--- a/PasswordManager/templates/admin/base_site.html
+++ b/PasswordManager/templates/admin/base_site.html
@@ -8,7 +8,7 @@ PassManager
 {% block branding %}
 <a href="{% url "admin:index" %}">
   <img style="float:left; margin: -6px 4px 4px 4px"
-       src="/static/pwm_logo.png"/>
+       src="/static/images/logo.png"/>
 </a>
 <h1 style="padding: 4px 0 0 70px;"
     id="site-name">PassManager
